# age_of_dragons

./: Cargo.toml  README.md  Rocket.toml
age_of_dragons_core/: Cargo.toml
age_of_dragons_core/src/: lib.rs
age_of_dragons_core/src/data/: mod.rs  name.rs  probability.rs  time.rs
age_of_dragons_core/src/data/character/: gender.rs  manager.rs  mod.rs
age_of_dragons_core/src/data/character/race/: gender.rs  manager.rs  mod.rs  stage.rs
age_of_dragons_core/src/data/character/race/reproduction/: count.rs  mod.rs
age_of_dragons_core/src/data/character/relation/: manager.rs  mod.rs
age_of_dragons_core/src/data/race/: mod.rs
age_of_dragons_core/src/generation/: number.rs
age_of_dragons_core/src/simulation/: mod.rs
age_of_dragons_core/src/simulation/character/: aging.rs  mate.rs  mod.rs
age_of_dragons_viewer/: Cargo.toml  Rocket.toml
age_of_dragons_viewer/src/: init.rs  main.rs
resources/templates/: base.html.tera  character.html.tera  characters.html.tera  home.html.tera  race.html.tera  races.html.tera
