[package]
name = "age_of_dragons_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age_of_dragons_core = { path = "../age_of_dragons_core" }
anyhow = "1.0"
rocket = "0.5.0-rc.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]